fixed board sizing issue on mobile; increased piece size

--- a/style/style.css
+++ b/style/style.css
@@ -2,10 +2,15 @@ body {
     width: 100%;
     height: 100%;
     display: flex;
+    overflow: hidden;
+    padding: 0;
+    margin: 0;
 }
 .container {
-    width: 600px;
-    height: 600px;
+    width: 90vw;
+    height: 90vw;
+    max-width: 600px;
+    max-height: 600px;
     padding: 0;
     margin: auto;
 }
@@ -47,7 +52,7 @@ body {
     width: 12.5%;
     height: 12.5%;
     cursor: pointer;
-    background-size: 85% auto;
+    background-size: 95% auto;
     background-position: center center;
     background-repeat: no-repeat;
     -webkit-transform: translateZ(0);
